# Palabos

./: README.md
palabos-v1.5r1/: CMakeLists.txt  clean.sh  compile.sh  gitpull.sh  run.sh  start_palabos.sh  startclean.sh
palabos-v1.5r1/externalLibraries/X11/: Xfuncproto.h
palabos-v1.5r1/externalLibraries/dlib/gui_widgets/: nativefont.h
palabos-v1.5r1/externalLibraries/open-mpi/include/: mpi_f08_interfaces.mod  mpi_f08_interfaces_callbacks.mod  pmpi_f08_interfaces.mod
palabos-v1.5r1/externalLibraries/open-mpi/lib/: libmca_common_sm.4.dylib  libmca_common_sm.dylib  libmpi.12.dylib  libmpi.dylib  libmpi_mpifh.dylib  libmpi_usempif08.dylib  libompitrace.0.dylib  libopen-pal.dylib  libopen-rte.12.dylib  libopen-rte.dylib  libopen-trace-format.1.dylib  libvt-hyb.0.dylib  libvt-mpi-unify.dylib  libvt-mpi.0.dylib
palabos-v1.5r1/externalLibraries/open-mpi/lib/pkgconfig/: ompi-c.pc  ompi-cxx.pc
palabos-v1.5r1/externalLibraries/open-mpi/share/openmpi/: mpic++-wrapper-data.txt  mpicc-wrapper-data.txt  mpifort-vt-wrapper-data.txt  mpifort-wrapper-data.txt
palabos-v1.5r1/externalLibraries/open-mpi/share/vampirtrace/: vtc++-wrapper-data.txt  vtcc-wrapper-data.txt  vtf90-wrapper-data.txt
palabos-v1.5r1/externalLibraries/pantheios-1.0.1-beta216/: README.txt  TODO.txt  pantheios-1.0.1-beta216-doc.chm
palabos-v1.5r1/externalLibraries/pantheios-1.0.1-beta216/include/b64/: implicit_link.h
palabos-v1.5r1/externalLibraries/pantheios-1.0.1-beta216/include/pantheios/: assert.h  fileline.h  inserters.hpp  pantheios.h  pantheios.hpp  trace.h
palabos-v1.5r1/externalLibraries/pantheios-1.0.1-beta216/include/shwild/: shwild.h  shwild.hpp
palabos-v1.5r1/externalLibraries/pantheios-1.0.1-beta216/include/xcontract/: implicit_link.h
palabos-v1.5r1/externalLibraries/pantheios-1.0.1-beta216/include/xcover/: implicit_link.h  xcover.h
palabos-v1.5r1/externalLibraries/pantheios-1.0.1-beta216/include/xtests/: xtests.h
palabos-v1.5r1/externalLibraries/pantheios-1.0.1-beta216/scripts/: make_hdrs.rb
palabos-v1.5r1/externalLibraries/pantheios-1.0.1-beta216/src/backends/: be.N.c  bec.ACE.cpp  bec.WindowsConsole.cpp  bec.file.cpp  bec.fprintf.cpp  bec.test.cpp
palabos-v1.5r1/externalLibraries/pantheios-1.0.1-beta216/src/core/: api.cpp  api.exitprocess.cpp
palabos-v1.5r1/externalLibraries/pantheios-1.0.1-beta216/src/inserters/: args.cpp  exception.cpp  hostid.cpp  integer.cpp  stream_character.cpp
palabos-v1.5r1/externalLibraries/pantheios-1.0.1-beta216/src/shwild/: api.cpp  matches.cpp  matches.hpp  (+2 more)
palabos-v1.5r1/externalLibraries/stlsoft-1.9.124/: HISTORY.txt  HOW_YOU_CAN_HELP.txt  INSTALL.txt
palabos-v1.5r1/src/: CMakeLists.txt
palabos-v1.5r1/src/algorithm/: benchmarkUtil.hh
palabos-v1.5r1/src/atomicBlock/: atomicBlockOperations3D.cpp  dataField3D.h
palabos-v1.5r1/src/basicDynamics/: isoThermalDynamics.h  isoThermalDynamics.hh
palabos-v1.5r1/src/core/: dynamics.h  dynamics.hh  dynamicsIdentifiers.hh  geometry3D.h  multiBlockIdentifiers3D.h  plbLogFiles.cpp  plbLogFiles.h  processorIdentifiers2D.cpp  processorIdentifiers3D.cpp
palabos-v1.5r1/src/dataProcessors/: dataAnalysisFunctional2D.h  dataAnalysisFunctional2D.hh  dataAnalysisFunctional3D.h  dataAnalysisFunctional3D.hh  dataAnalysisWrapper2D.h  dataAnalysisWrapper2D.hh  dataAnalysisWrapper3D.h  dataAnalysisWrapper3D.hh  metaStuffFunctional3D.hh  metaStuffWrapper3D.cpp  metaStuffWrapper3D.h  metaStuffWrapper3D.hh
palabos-v1.5r1/src/externalLibraries/dlib/: serialize.h
palabos-v1.5r1/src/externalLibraries/open-mpi/: INSTALL_RECEIPT.json
palabos-v1.5r1/src/externalLibraries/pantheios-1.0.1-beta216/: AUTHORS.txt  CHANGES.txt  HISTORY.txt  INSTALL.txt  KNOWN_ISSUES.txt  LICENSE.txt  NEWS.txt
palabos-v1.5r1/src/externalLibraries/stlsoft-1.9.124/: AUTHORS.txt  CHANGES.txt  KNOWN_ISSUES.txt  NEWS.txt  TODO.txt
palabos-v1.5r1/src/io/: imageWriter.h  imageWriter.hh  mpiParallelIO.cpp  multiBlockReader2D.cpp  multiBlockReader3D.cpp  multiBlockWriter3D.cpp  utilIO_2D.cpp  utilIO_3D.cpp  vtkDataOutput.h  vtkDataOutput.hh
palabos-v1.5r1/src/libraryInterfaces/: TINYXML_xmlIO.h
palabos-v1.5r1/src/modules/: LBMexceptions.hh  debug.hh  mpiDataManager.h  mpiDataManager.hh
palabos-v1.5r1/src/multiBlock/: defaultMultiBlockPolicy3D.h  multiBlock3D.cpp  multiBlockGenerator3D.h  multiBlockGenerator3D.hh  multiBlockLattice3D.h  multiBlockLattice3D.hh  multiBlockManagement2D.cpp  multiBlockManagement3D.cpp  multiBlockManagement3D.h  multiBlockOperations3D.cpp  multiBlockSerializer2D.cpp  multiBlockSerializer2D.h  multiBlockSerializer3D.cpp  multiBlockSerializer3D.h  multiContainerBlock2D.cpp  multiContainerBlock3D.cpp  multiDataField3D.h  multiDataField3D.hh  redistribution3D.cpp  redistribution3D.h  sparseBlockStructure2D.cpp  sparseBlockStructure2D.h  sparseBlockStructure3D.cpp  sparseBlockStructure3D.h  staticRepartitions3D.cpp  staticRepartitions3D.h  threadAttribution.cpp  threadAttribution.h
palabos-v1.5r1/src/multiGrid/: multiGrid2D.cpp  multiGrid3D.cpp  multiGridOperations2D.cpp  multiGridOperations3D.cpp  multiScale.cpp  parallelizer2D.cpp  parallelizer3D.cpp
palabos-v1.5r1/src/multiPhysics/: bubbleMatch3D.cpp
palabos-v1.5r1/src/offLattice/: domainClustering3D.cpp  guoOffLatticeModel3D.h  guoOffLatticeModel3D.hh  immersedWalls3D.h  makeSparse3D.hh  nextNeighbors3D.h  offLatticeBoundaryCondition3D.h  offLatticeBoundaryCondition3D.hh  offLatticeBoundaryProfiles3D.h  offLatticeModel3D.hh  triangleBoundary3D.h  triangleBoundary3D.hh  triangleHash.hh  triangleSet.hh  triangleToDef.h  triangleToDef.hh  triangularSurfaceMesh.h  triangularSurfaceMesh.hh  voxelizer.h  voxelizer.hh
palabos-v1.5r1/src/parallelism/: communicationPackage2D.h  communicationPackage3D.h  mpiManager.cpp  mpiManager.h  parallelBlockCommunicator2D.cpp  parallelBlockCommunicator3D.cpp  parallelDynamics.hh  parallelMultiBlockLattice3D.hh  sendRecvPool.cpp  sendRecvPool.h
palabos-v1.5r1/viscosityTest/: start.scpt
palabos-v1.5r1/viscosityTest/src/: backtrace.hh  parameters.xml  test.cpp  viscosity.cpp
palabos-v1.5r1/viscosityTest/stl/: ball.stl
(+1732 files in other folders)
